@@ -11,8 +11,8 @@
 """
 
 from logbook.base import LogRecord, Logger, LoggerGroup, NestedSetup, \
-     Processor, get_level_name, lookup_level, CRITICAL, ERROR, WARNING, \
-     NOTICE, INFO, DEBUG, NOTSET
+     Processor, get_level_name, lookup_level, dispatch_record, CRITICAL, \
+     ERROR, WARNING, NOTICE, INFO, DEBUG, NOTSET
 from logbook.handlers import Handler, StreamHandler, FileHandler, \
      StderrHandler, RotatingFileHandler, TimedRotatingFileHandler, \
      TestHandler, MailHandler, SyslogHandler, NullHandler, \
