@@ -37,3 +37,6 @@ Release date to be announced.
   instead of a function.
 - Added ticketing handlers that send logs directly into a database.
 - Added MongoDB backend for ticketing handlers
+- Added a :func:`logbook.dispatch_record` function to dispatch
+  records to handlers independently of a logger (uses the default
+  record dispatching logic).
